# star-wars-gql-rs

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  sqlx-data.json  test-data.sql
.github/workflows/: cd.yml  ci.yml  general.yml
migrations/: 20210823000118_init.sql
src/: config.rs  loaders.rs  main.rs  observability.rs  routes.rs
src/database/: mod.rs  models.rs  repository.rs
src/schema/: character.rs  filmmaker.rs  mod.rs  movie.rs  planet.rs  root.rs  starship.rs
